<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_news"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:background="@color/color_app_background"
    android:orientation="vertical"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100"
        tools:ignore="DisableBaselineAlignment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50">

            <!-- Background image filling the entire width -->
            <ImageView
                android:id="@+id/ivPicture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentDescription"
                android:scaleType="fitXY"
                android:src="@drawable/car_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <!-- Icon on the top left -->
            <ImageView
                android:id="@+id/ivLeftIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/youtube"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="8dp" />

            <!-- Icon on the top right -->
            <ImageView
                android:id="@+id/ivRightIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/frame_25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="50"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/selected_tab_background"
                    android:contentDescription="@string/contentDescription" />

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/strawford_medium"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/technology"
                    android:textColor="@color/color_black_text_title"
                    android:textSize="11sp"
                    android:textStyle="normal"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/strawford_regular"
                android:lineSpacingExtra="5dp"
                android:text="@string/step_into_tomorrow_exploring_spatial_computing_s_impact_on_industries_and_the_metaverse"
                android:textColor="@color/color_black_text_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/strawford_regular"
                android:text="12 Feb 2024"
                android:layout_marginBottom="5dp"
                android:textColor="@color/color_black_text_title"
                android:textSize="12sp" />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>