<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/articleDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".activity.ArticleDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- First ImageView aligned to the left -->
            <ImageView
                android:id="@+id/back"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="start"
                android:background="@drawable/frame_35"
                android:contentDescription="@string/contentDescription" />

            <!-- Spacer View to push the second ImageView to the right -->
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Second ImageView aligned to the right -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="end"
                android:background="@drawable/logo"
                android:contentDescription="@string/contentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/strawford_bold"
                android:padding="10dp"
                android:text="Step Into Tomorrow:"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.254" />

            <TextView
                android:id="@+id/tvIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/strawford_regular"
                android:padding="10dp"
                android:text="Exploring Spatial Computing’s Impact On Industries And The Metaverse!"
                android:textColor="#000000"
                android:textSize="24sp" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/strawford_regular"
                    android:padding="4dp"
                    android:text="Type"
                    android:textAlignment="center"
                    android:textColor="#929292"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/strawford_regular"
                    android:padding="4dp"
                    android:text="Category"
                    android:textAlignment="center"
                    android:textColor="#929292"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/strawford_regular"
                    android:padding="4dp"
                    android:text="Date"
                    android:textAlignment="center"
                    android:textColor="#929292"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/strawford_black"
                    android:padding="4dp"
                    android:text="Article"
                    android:textAlignment="center"
                    android:textColor="#929292"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/strawford_black"
                    android:padding="4dp"
                    android:text="Technology"
                    android:textAlignment="center"
                    android:textColor="#929292"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/strawford_black"
                    android:padding="4dp"
                    android:text="26 Feb 2024"
                    android:textAlignment="center"
                    android:textColor="#929292"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Background image filling the entire width -->
                <ImageView
                    android:id="@+id/ivPicture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentDescription"
                    android:scaleType="fitXY"
                    android:src="@drawable/car_top"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Icon on the top left -->
                <ImageView
                    android:id="@+id/ivLeftIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/youtube"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Icon on the top right -->
                <ImageView
                    android:id="@+id/ivRightIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/frame_25"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/strawford_regular"
                        android:padding="4dp"
                        android:text="Intro"
                        android:textAlignment="center"
                        android:textColor="#929292"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/strawford_black"
                        android:padding="4dp"
                        android:text="Now: Simulating the enterprise"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/strawford_regular"
                        android:padding="4dp"
                        android:text="Introduction #1"
                        android:textAlignment="center"
                        android:textColor="#929292"
                        android:textSize="18sp" />

                </TableRow>
            </TableLayout>
        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#D6D6D6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start|center"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="13">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/strawford_regular"
                    android:text="A"
                    android:textStyle="bold"
                    android:gravity="top"
                    android:textColor="#000000"
                    android:textSize="70sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="87">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:lineSpacingExtra="1dp"
                    android:fontFamily="@font/strawford_regular"
                    android:text="s the industrial metaverse evolves into a critical enterprise , industrial applications. Leveraging"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:fontFamily="@font/strawford_regular"
            android:text="@string/article_detail_body"
            android:textColor="#000000"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/chip"
                        android:layout_margin="5dp"
                        android:padding="7dp"
                        android:fontFamily="@font/strawford_regular"
                        android:text="Spatial Computing"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/chip"
                        android:padding="7dp"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/strawford_regular"
                        android:text="@string/industrial_metaverse"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/chip"
                        android:padding="7dp"
                        android:layout_margin="6dp"
                        android:fontFamily="@font/strawford_regular"
                        android:text="AR in Retail"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/chip"
                        android:padding="7dp"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/strawford_regular"
                        android:text="Digital Interaction"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/chip"
                        android:padding="5dp"
                        android:layout_margin="7dp"
                        android:fontFamily="@font/strawford_regular"
                        android:text="Enterprise Tools"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/chip"
                        android:padding="5dp"
                        android:layout_margin="7dp"
                        android:fontFamily="@font/strawford_regular"
                        android:text="AR/VR Technology"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/recent_articles"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/strawford_bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcRecentArticles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>